--- a/_user/template.html
+++ b/_user/template.html
@@ -3,7 +3,7 @@
    <div class="container">
       <div class="logo">
          <h1 ><a href="index.html"><!-- <b>T<br>H<br>E</b>Big Store<span>The Best Supermarket</span> -->
-            <img src="images/Logo.gif" alt="" style="height:50px;object-fit:cover;">
+            <img src="images/Logo.jpg" alt="" style="height:80px;object-fit:cover;">
          </a></h1>
       </div>
       <div class="head-t">
@@ -47,7 +47,7 @@
                <li><a href="index.html" class="hyper "><span>首頁</span></a></li>	
                
                <li >
-                  <a href="kitchen.html" class="dropdown-toggle  hyper"  ><span>印刷服務</span></a>
+                  <a href="kitchen.html" class="dropdown-toggle  hyper"  ><span>皮具商品</span></a>
                   <!-- <ul class="dropdown-menu multi"> class="dropdown " data-toggle="dropdown" <b class="caret"></b>
                      <div class="row">
                         <div class="col-sm-3">
@@ -240,7 +240,7 @@
 			<div class="footer-bottom">
 				<h2 ><a href="index.html">
                <!-- <b>T<br>H<br>E</b>Big Store<span>The Best Supermarket</span> -->
-               <img src="images/Logo.gif" alt="" style="height:50px;object-fit:cover;">
+               <img src="images/Logo.jpg" alt="" style="height:80px;object-fit:cover;">
             </a></h2>
 				<p class="fo-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
 				<ul class="social-fo">
