--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</script>
 <!---//End-rate---->
 <script type="module" src="/_user/loader.js"></script>
-<meta property="dz:uid" content="kspro">
+<meta property="dz:uid" content="poko">
 </head>
 <body>
 <!-- <a href="offer.html"><img src="images/download.png" class="img-head" alt=""></a> -->
@@ -292,14 +292,14 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			</div>
 		</div>
 			<div class="tab-head ">
-				<nav class="nav-sidebar">
+				<!-- <nav class="nav-sidebar">
 					<ul class="nav tabs ">
 					  <li class="active"><a href="#tab1" data-toggle="tab">包裝彩盒</a></li>
 					  <li class=""><a href="#tab2" data-toggle="tab">目錄書刊</a></li> 
 					  <li class=""><a href="#tab3" data-toggle="tab">紙袋製作</a></li>  
 					  <li class=""><a href="#tab4" data-toggle="tab">絲網印刷</a></li>
 					</ul>
-				</nav>
+				</nav> -->
 				<div class=" tab-content tab-content-t ">
 					<div class="tab-pane active text-style" id="tab1">
 						<dz-product-wrapper>
