--- a/product/template.html
+++ b/product/template.html
@@ -62,7 +62,7 @@
       <script type="text/javascript" src="/asset/jquery.min.js"></script><script type="text/javascript" src="/asset/jquery.min(1).js"></script><script charset="utf-8" src="/asset/10.e684251b.js"></script>
       <link rel="stylesheet" href="/asset/chaty-front.css" type="text/css" media="all">
       <script type="module" src="/_user/loader.js"></script>
-      <meta property="dz:uid" content="kspro">
+      <meta property="dz:uid" content="poko">
    </head>
    <body class="evallinone headertop template-index suffix- chaty-in-desktop has-pro-version">
       
