--- a/cart.html
+++ b/cart.html
@@ -64,7 +64,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</script>
 <!---//End-rate---->
 <script type="module" src="/_user/loader.js"></script>
-<meta property="dz:uid" content="kspro">
+<meta property="dz:uid" content="poko">
 </head>
 <body>
 <!-- <a href="offer.html"><img src="images/download.png" class="img-head" alt=""></a> -->
