--- a/contact.html
+++ b/contact.html
@@ -261,8 +261,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
  <!--banner-->
 <div class="banner-top">
 	<div class="container">
-		<h3 >Contact</h3>
-		<h4><a href="index.html">Home</a><label>/</label>Contact</h4>
+		<h3 >聯絡我們</h3>
+		<h4><a href="index.html">首頁</a><label>/</label>聯絡我們</h4>
 		<div class="clearfix"> </div>
 	</div>
 </div>
@@ -271,7 +271,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="contact">
 	<div class="container">
 		<div class="spec ">
-			<h3>Contact</h3>
+			<h3>聯絡我們</h3>
 				<div class="ser-t">
 					<b></b>
 					<span><i></i></span>
@@ -280,27 +280,23 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 		<div class=" contact-w3">	
 			<div class="col-md-5 contact-right">	
-				<img src="images/cac.jpg" class="img-responsive" alt="">
-				<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819" style="border:0"></iframe>
+				<img class="img-responsive" src="images/about1.jpg" alt="">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3690.8170929526696!2d114.2055611153708!3d22.322756185311892!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x340401330b61fa21%3A0x74d0c4b6f00cea92!2z6aaZ5riv5Lmd6b6N54Gj6Ieo6I-v6KGXMTnomZ_ljZfkuLDllYbkuJrkuK3lv4M!5e0!3m2!1szh-CN!2suk!4v1640362066096!5m2!1szh-CN!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 			</div>
 			<div class="col-md-7 contact-left">
-				<h4>Contact Information</h4>
-				<p> Nemo enim ipsam voluptatem quia voluptas sit aspernatur 
-				aut odit aut fugit, sed quia consequuntur magni dolores eos
-				qui ratione voluptatem sequi nesciunt. Neque porro quisquam 
-				est, qui dolorem ipsum quia dolor sit amet, consectetur</p>
+				<h4>聯絡資料</h4>
+			
 				<ul class="contact-list">
-					<li> <i class="fa fa-map-marker" aria-hidden="true"></i> 756 Global Place, New York.</li>
-					<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com">mail@example.com</a></li>
-					<li> <i class="fa fa-phone" aria-hidden="true"></i>+123 2222 222</li>
+					<li> <i class="fa fa-map-marker" aria-hidden="true"></i>臨樂街19號南豐商業中心404</li>
+					<li><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:example@mail.com">henry930@gmail.com</a></li>
+					<li> <i class="fa fa-phone" aria-hidden="true"></i>+852 65327819</li>
 				</ul>
 				<div id="container">
 					<!--Horizontal Tab-->
 					<div id="parentHorizontalTab">
 						<ul class="resp-tabs-list hor_1">
 							<li><i class="fa fa-envelope" aria-hidden="true"></i></li>
-							<li> <i class="fa fa-map-marker" aria-hidden="true"></i> </span></li>
-							<li> <i class="fa fa-phone" aria-hidden="true"></i></li>
+
 						</ul>
 						<div class="resp-tabs-container hor_1">
 							<div>
@@ -311,28 +307,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 									<input type="submit" value="Submit" >
 								</form>
 							</div>
-							<div>
-								<div class="map-grid">
-								<h5>Our Branches</h5>
-									<ul>
-										<li><i class="fa fa-arrow-right" aria-hidden="true"></i>756 Global Place, New York.</li>
-										<li><i class="fa fa-arrow-right" aria-hidden="true"></i>889 diamond street, USA.</li>
-										<li><i class="fa fa-arrow-right" aria-hidden="true"></i>756 global Place, New York.</li>
-										<li><i class="fa fa-arrow-right" aria-hidden="true"></i>889 diamond street, USA.</li>
-									</ul>
-								</div>
-							</div>
-							<div>
-								<div class="map-grid">
-									<h5>Contact Me Through</h5>
-									<ul>
-										<li>Mobile No : +123 456 7890</li>
-										<li>Office No : +123 222 2222</li>
-										<li>Home No : +123 456 7890</li>
-										<li>Fax No : +123 456 7890</li>
-									</ul>
-								</div>
-							</div>
+
 						</div>
 					</div>
 				</div>
