--- a/about.html
+++ b/about.html
@@ -260,8 +260,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
     <!--banner-->
 <div class="banner-top">
 	<div class="container">
-		<h3 >About</h3>
-		<h4><a href="index.html">Home</a><label>/</label>About</h4>
+		<h3>關於我們</h3>
+		<h4><a href="index.html">首頁</a><label>/</label>關於我們</h4>
 		<div class="clearfix"> </div>
 	</div>
 </div>
@@ -274,7 +274,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="container">
 		<div  class="about">
 	<div class="spec ">
-				<h3>About</h3>
+				<h3>關於我們</h3>
 					<div class="ser-t">
 						<b></b>
 						<span><i></i></span>
@@ -283,13 +283,13 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			</div>
 			
 			<div class="col-md-4 about-right">
-			<img class="img-responsive" src="images/ab.jpg" alt="">
+			<img class="img-responsive" src="images/about0.jpg" alt="">
 			</div>
 			<div class="col-md-4 about-left">
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse laoreet sem sit amet dolor luctus pellentesque. Pellentesque eleifend tellus at interdum elementum. Nam egestas molestie elit. Vivamus sed accumsan quam, a mollis magna. Nam aliquet eros eget sapien consequat tincidunt at vel nibh. Duis ut turpis mi. Duis nec scelerisque urna, sit amet varius arcu. Aliquam aliquet sapien quis mauris semper suscipit. Maecenas pharetra dapibus posuere. Praesent odio sem.  </p>
+				<p>優質手作皮具，一針一線全手做，歡迎訂造或特別設計，另有手作課程，歡迎咨询</p>
 			</div>
 			<div class="col-md-4 about-right">
-			<img class="img-responsive" src="images/ab1.jpg" alt="">
+				<img class="img-responsive" src="images/about1.jpg" alt="">
 			</div>
 			
 			<div class="clearfix"> </div>
@@ -301,7 +301,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<div  class="work">
 		<div class="container">
 			<div class="spec spec-w3ls">
-				<h3>Our Journey</h3>
+				<h3>我們的經歷</h3>
 					<div class="ser-t">
 						<b></b>
 						<span><i></i></span>
@@ -311,76 +311,51 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
 					<div class=" work-w3 "> 
-						<h5> May 2012</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+						<h5> 1990</h5>
+						<p>本公司創立，開初只有一人和一枱印刷機，承接傳單、海報等印刷。</p>
 					</div>
 					<label></label>
 				</div>
 				<div class="col-md-6 work-right"> 
 					<div class=" work-w31"> 
-						<h5> November 2012</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+						<h5> 2000</h5>
+						<p>有自己的寫字樓，公司人數增至五人，除了印刷，亦承接設計工作。 </p>
 					</div>
 					<label></label>
 				</div>
 				<div class="clearfix"> </div>
-				<span> 2012</span>
+				<span> 1990</span>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
 					<div class=" work-w3 "> 
-						<h5> June 2013</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+						<h5>2003</h5>
+						<p>沙士侍虐。公司幾乎面臨倒閉，幸好伙計同事萬眾一心，渡過難關。 </p>
 					</div>
 					<label></label>
 				</div>
 				<div class="col-md-6 work-right"> 
 					<div class=" work-w31"> 
-						<h5>December 2013</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+						<h5>2010</h5>
+						<p>公司採用電子化落單，及電腦設計取代打稿。生意額再度提升 </p>
 					</div>
 					<label></label>
 				</div>
 				<div class="clearfix"> </div>
-				<span> 2013</span>
+				<span> 2010</span>
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
 					<div class=" work-w3 "> 
-						<h5> April 2014</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
-					</div>
-					<label></label>
-				</div>
-				<div class="col-md-6 work-right"> 
-					<div class=" work-w31"> 
-						<h5> August 2014</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
+						<h5> 2014</h5>
+						<p>印刷廠房搬往內地。香港只負責市場部和設計部，產品亦包括禮品製作及生產。</p>
 					</div>
 					<label></label>
 				</div>
 				<div class="clearfix"> </div>
-				<span> 2014</span>
+				<span> 2020</span>
 			</div>
-			<div class="work-info"> 
-				<div class="col-md-6 work-left"> 
-					<div class=" work-w3 "> 
-						<h5> February 2015</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
-					</div>
-					<label></label>
-				</div>
-				<div class="col-md-6 work-right"> 
-					<div class=" work-w31"> 
-						<h5> July 2015</h5>
-						<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo </p>
-					</div>
-					<label></label>
-				</div>
-				<div class="clearfix"> </div>
-				<span> 2015</span>
-				<span class="last"> 2016</span>
-			</div>
+
 		</div>
 	</div>
 	<!--//work-experience-->
@@ -388,15 +363,17 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div class="container">
 	<div class="advantages">
 			<div class="col-md-6 advantages-left ">
-				<h3>Our Advantages</h3>
+				<h3>公司優勢</h3>
 				<div class="advn-one">
 						<div class="ad-mian">
 							<div class="ad-left">
 								<p>1</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Elacus a porta varius dui</a></h4>
-								<p>In neque arcu, vulputate vitae dignissim id, placerat adipiscing lorem. Nulla consectetur adipiscing metus vel pulvinar. Aenean molestie mauris non diam tincidunt faucibus. </p>
+								<h4><a href="single.html">人性化管理</a></h4>
+								<p>
+									每個訂單，都有專人負責跟進。並有Whatsapp查詢及回覆，保證半日內有回覆。
+								</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
@@ -405,34 +382,28 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								<p>2</p>
 							</div>
 							<div class="ad-right">
-								<h4><a href="single.html">Elacus a porta varius dui</a></h4>
-								<p>In neque arcu, vulputate vitae dignissim id, placerat adipiscing lorem. Nulla consectetur adipiscing metus vel pulvinar. Aenean molestie mauris non diam tincidunt faucibus. </p>
+								<h4><a href="single.html">電子化管理</a></h4>
+								<p>
+									採用網上落單，所有資料均有數據庫儲存。保證不會漏單、出錯，或遲緩。完成印刷後，更有短訊通知，確保客戶可以儘快取得貨品
+								</p>
 							</div>
 							<div class="clearfix"></div>
 						</div>
-						<div class="ad-mian">
-							<div class="ad-left">
-								<p>3</p>
-							</div>
-							<div class="ad-right">
-								<h4><a href="single.html">Elacus a porta varius dui</a></h4>
-								<p>In neque arcu, vulputate vitae dignissim id, placerat adipiscing lorem. Nulla consectetur adipiscing metus vel pulvinar. Aenean molestie mauris non diam tincidunt faucibus. </p>
-							</div>
-							<div class="clearfix"></div>
-						</div>
+
 					</div>
 			</div>
 			<div class="col-md-6 advantages-left about-agi">
-				<h3>Our Skills</h3>
+				<h3>專業服務</h3>
 			<div class="advn-two">
-						<h4><a href="single.html"> eu tincidunt lacinia, elit quam ultri ces ipsum, quis ultricies ipsum ante</a></h4>
-						<p>Donec sagittis interdum tellus sed bibendum. Aen ean fringilla ut lacus eu vehicula. Curabitur non nibh quis nisi vestibulum aliquet non sed dolor. Ut est risus, consectetur sit amet pretium in, cursus in dui. Donec ac rhoncus libero.</p>
+						<p>
+							我們提供了下列服務：
+						</p>
 						<ul>
-							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>Praesent vestibulum molestie lacus</a></li>
-							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>Donec sagittis interdum tellus</a></li>
-							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>Nulla consectetur adipiscing</a></li>
-							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>Donec ac rhoncus libero.</a></li>
-							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>Erci eu tincidunt lacinia</a></li>
+							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>名片、海報傳單印刷</a></li>
+							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>信封、覆寫聯單印刷</a></li>
+							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>紙杯墊、筷套印刷</a></li>
+							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>廣告筆、紀念筆印刷</a></li>
+							<li><a href="#"> <i class="fa fa-angle-right" aria-hidden="true"></i>	PP、PVC大圖輸出印刷</a></li>
 						</ul>
 			</div>
 			</div>
